# AGDA_HTML

./: .gitignore  README.md
agda_comp/: ATTRIBUTIONS  LICENSE  README.md  pyproject.toml
agda_comp/src/: main.py
agda_comp/src/agda_comp/: __main__.py  cli.py  make_generator.py  sort_alg.py  test_generator.py  test_lvl.py  test_lvl_disjoint.py  test_lvlb.py  test_normal.py  test_unsafe.py
agda_comp/src/agda_comp/tests/lvl_2/: index-1-0.lagda  index-1-4.lagda  index-1-6.lagda  index-10-3.lagda  index-10-5.lagda  index-12-1.lagda  index-13-0.lagda  index-13-5.lagda  index-13-7.lagda  index-14-1.lagda  index-14-7.lagda  index-15-4.lagda  index-16-2.lagda  index-19-1.lagda  index-21-1.lagda  index-22-4.lagda  index-23-1.lagda  index-26-4.lagda  index-27-0.lagda  index-27-1.lagda  index-28-3.lagda  index-29-3.lagda  index-30-1.lagda  index-31-6.lagda  index-32-0.lagda  index-32-2.lagda  index-32-3.lagda  index-32-9.lagda  index-33-16.lagda  index-33-8.lagda  index-34-0.lagda  index-34-15.lagda  index-34-16.lagda  index-34-19.lagda  index-34-3.lagda  index-34-9.lagda  index-35-0.lagda  index-35-10.lagda  index-35-17.lagda  index-35-7.lagda  (+48 more)
agda_comp/src/agda_comp/tests/lvl_5/: index-1-2.lagda  index-13-0.lagda  index-13-1.lagda  index-13-2.lagda  index-13-3.lagda  index-14-2.lagda  index-15-1.lagda  index-22-0.lagda  index-24-0.lagda  index-29-1.lagda  index-3-0.lagda  index-3-1.lagda  index-30-0.lagda  index-31-4.lagda  index-32-2.lagda  index-32-3.lagda  index-32-7.lagda  index-33-1.lagda  index-33-2.lagda  index-33-3.lagda  index-33-4.lagda  index-34-5.lagda  index-35-0.lagda  index-36-0.lagda  index-36-5.lagda  index-37-0.lagda  index-37-1.lagda  index-39-0.lagda  index-4-0.lagda  index-40-1.lagda  index-45-1.lagda  index-46-0.lagda  index-6-1.lagda  index-6-3.lagda  index-6-4.lagda  index-7-1.lagda  index-8-1.lagda  index-9-2.lagda
agda_comp/src/agda_comp/tests/lvl_disjoint/: index-1-0.lagda  index-1-1.lagda  index-2-0.lagda  index-3-0.lagda  index-3-1.lagda  index-5-1.lagda  index-5-2.lagda  index-7-0.lagda
agda_comp/src/agda_comp/tests/lvlb_2/: Makefile  index-1-1.lagda  index-12-0.lagda  index-12-1.lagda  index-14-1.lagda  index-18-1.lagda  index-19-1.lagda  index-20-1.lagda  index-21-1.lagda  index-22-0.lagda  index-23-1.lagda  index-25-0.lagda  index-29-1.lagda  index-31-0.lagda  index-31-1.lagda  index-32-1.lagda  index-33-0.lagda  index-33-1.lagda  index-34-1.lagda  index-35-0.lagda  index-35-1.lagda  index-36-0.lagda  index-37-0.lagda  index-37-1.lagda  index-38-1.lagda  index-39-0.lagda  (+12 more)
agda_comp/test/: test_strategies.py  validate.py
agda_comp/test/graphs/: agda_comp_graph_AllModulesIndex.dot
agda_tree/: README.md  cli.py  commands.py  data.txt  def_cmds.py  def_tree.pickle  dep_tree.py  level_sort.py  main.py  mod_cmds.py  parser.py  pyproject.toml  queries.py  requirements.txt  temp.py  tmp.py  tree.pickle
agda_tree/parser/data/structures/: graph_properties.py
agda_tree/src/: main.py  mod_tree.pickle  mod_unimath.pickle  temp.py
agda_tree/src/agda_tree/: __init__.py  agdasexp_installer.py  cli.py  def_cmds.py  graph.dot  mod_cmds.py  parser.py  temp.py
agda_tree/test/: mod_tree.pickle  test_definition.py  test_module.py
agda_tree/test/graphs/: mod_tree.pickle
(+3077 files in other folders)
