[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agda_comp"
version = "0.0.1"
authors = [
    { name="Julian Vidal", emails="jcv116@student.bham.ac.uk" },
]
description = "A package to optimize compilation of Agda projects"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
license = "MIT"
license-files = ["LICEN[CS]E*", "README.md", "ATTRIBUTIONS"]
dependencies = [
    "networkx",
    "tqdm",
    "pydot"
]

[project.urls]
Homepage = "https://github.com/JulianVidal/AGDA_HTML"

[project.scripts]
agda_comp = "agda_comp.cli:main"
